# Goe-Charger-Interface

./: CMakeLists.txt  GoeCharger.cpp  GoeCharger.h  PowerRange.cpp  PowerRange.h  test.cpp  vcpkg.json
Server/: CMakeLists.txt  Server.cpp  Server.h  server_global.h
Server/test/: CMakeLists.txt  testServer.cpp  test_requests.py
Utils/: Cache.h
test/: CMakeLists.txt  GoeCharger_test.cpp  test.cpp
